Updated Project Date

--- a/HousingDistricts/HousingDistricts.csproj
+++ b/HousingDistricts/HousingDistricts.csproj
@@ -47,17 +47,19 @@
     <DefineConstants>TRACE</DefineConstants>
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
-    <PlatformTarget>x86</PlatformTarget>
+    <PlatformTarget>x64</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <WarningLevel>0</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="MySql.Data">
-      <HintPath>Refs\MySql.Data.dll</HintPath>
+      <HintPath>..\..\1 - References\MySql.Data.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\..\1 - References\Newtonsoft.Json.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="OTAPI">
       <HintPath>..\..\1 - References\OTAPI.dll</HintPath>
@@ -66,9 +68,11 @@
     <Reference Include="System.Data" />
     <Reference Include="TerrariaServer">
       <HintPath>..\..\1 - References\TerrariaServer.exe</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="TShockAPI">
       <HintPath>..\..\1 - References\TShockAPI.dll</HintPath>
+      <Private>False</Private>
     </Reference>
   </ItemGroup>
   <ItemGroup>
